--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-public/index.html
-public/out.js
-public/lib.js
+public/dashboard/index.html
+public/dashboard_static/out.js
+public/dashboard_static/lib.js
